--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="utf-8">
     <title>Test site</title>
     <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="scripts/script.js"></script>
   </head>
   <body>
-      <h1>Hello World</h1>
-
+      <footer>
+        <div id="footer"></div>
+          <div id="back">
+            <a class="link_1" href="#">Show<span>Tracker</span></a>
+            <a class="link_2" href="#">Сериалы</a>
+            <a class="link_2" href="#">Фильмы</a>
+            <a class="link_2" href="#">ТВ</a>
+            <a class="link_2" href="#">Актёры</a>
+            <a class="link_2" href="#">Персонажи</a>
+            <a class="link_2" href="#">VIP</a>
+            <a class="link_3" href="#">Войти</a>
+          </div>
+      </footer>
   </body>
 </html>
