--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="scripts/script.js"></script>
   </head>
-  <body>
-      <footer>
-        <div id="footer"></div>
+  <body onload="openNav()">
+      <header>
+        <div id="header"></div>
           <div id="back">
             <a class="link_1" href="#">Show<span>Tracker</span></a>
             <a class="link_2" href="#">Сериалы</a>
@@ -19,6 +19,16 @@
             <a class="link_2" href="#">VIP</a>
             <a class="link_3" href="#">Войти</a>
           </div>
-      </footer>
+      </header>
+      <div id="myNav" class="backGround">
+        <div>
+          <h1>Следи за выходом
+            <br>новых серий</h1>
+            <p>Получай оповещения и рекомендации о новых
+              <br>фильмах и сериалах от ShowTracker</p>
+            <a class="link_4" href="#">Смотреть</a>
+          <a class="link_5" href="#">Войти</a>
+        </div>
+      </div>
   </body>
 </html>
