--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>ShowTracker</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
 		<script src="scripts/modernizr.custom.js"></script>
