--- a/index.html
+++ b/index.html
@@ -13,31 +13,31 @@
         <div id="header"></div>
           <div id="back">
             <a class="link_1" href="index.html">Show<span>Tracker</span></a>
-            <a class="link_2" href="pages/serials.html">Сериалы</a>
-            <a class="link_2" href="pages/films.html">Фильмы</a>
-            <a class="link_2" href="pages/TV.html">ТВ</a>
-            <a class="link_2" href="pages/actors.html">Актёры</a>
-            <a class="link_2" href="pages/charakters.html">Персонажи</a>
+            <a class="link_2" href="pages/serials.html">Serials</a>
+            <a class="link_2" href="pages/films.html">Films</a>
+            <a class="link_2" href="pages/TV.html">TV</a>
+            <a class="link_2" href="pages/actors.html">Actors</a>
+            <a class="link_2" href="pages/charakters.html">Charakters</a>
             <a class="link_2" href="pages/VIP.html">VIP</a>
-            <a class="link_3" style="height: 41px;" href="pages/login.html">Войти</a>
+            <a class="link_3" style="height: 41px;" href="pages/login.html">Log in</a>
 
           </div>
       </header>
       <div id="sb-search" class="sb-search">
         <form>
-          <input class="sb-search-input" placeholder="Что будем искать?:)" type="text" value="" name="search" id="search">
+          <input class="sb-search-input" placeholder="What are we going to look for?:)" type="text" value="" name="search" id="search">
           <input class="sb-search-submit" type="submit" value="">
           <span class="sb-icon-search"></span>
         </form>
       </div>
       <div id="myNav" class="backGround">
         <div>
-          <h1>Следи за выходом
-            <br>новых серий</h1>
-            <p>Получай оповещения и рекомендации о новых
-              <br>фильмах и сериалах от ShowTracker</p>
-            <a class="link_4" style="height: 59px;" href="pages/look.html">Смотреть</a>
-          <a class="link_5" style="height: 58px;" href="pages/login.html">Войти</a>
+          <h1 class="h_1">Watch for a new
+            <br>release of the series</h1>
+            <p class="p_1">Get alerts and recommendations about new
+              <br>movies and TV shows from ShowTracker</p>
+            <a class="link_4" style="height: 59px;" href="pages/watch.html">Watch</a>
+          <a class="link_5" style="height: 58px;" href="pages/login.html">Log in</a>
         </div>
       </div>
       <script type="text/javascript">
