--- a/pages/serials.html
+++ b/pages/serials.html
@@ -13,24 +13,27 @@
         <div id="header"></div>
           <div id="back">
             <a class="link_1" href="../index.html">Show<span>Tracker</span></a>
-            <a class="link_2" href="serials.html">Сериалы</a>
-            <a class="link_2" href="films.html">Фильмы</a>
-            <a class="link_2" href="TV.html">ТВ</a>
-            <a class="link_2" href="actors.html">Актёры</a>
-            <a class="link_2" href="charakters.html">Персонажи</a>
+            <a class="link_2" href="serials.html">Serials</a>
+            <a class="link_2" href="films.html">Films</a>
+            <a class="link_2" href="TV.html">TV</a>
+            <a class="link_2" href="actors.html">Actors</a>
+            <a class="link_2" href="charakters.html">Charakters</a>
             <a class="link_2" href="VIP.html">VIP</a>
-            <a class="link_3" style="height: 41px;" href="login.html">Войти</a>
+            <a class="link_3" style="height: 41px;" href="login.html">Log in</a>
           </div>
       </header>
       <div id="sb-search" class="sb-search">
         <form>
-          <input class="sb-search-input" placeholder="Что будем искать?:)" type="text" value="" name="search" id="search">
+          <input class="sb-search-input" placeholder="What are we going to look for?:)" type="text" value="" name="search" id="search">
           <input class="sb-search-submit" type="submit" value="">
           <span class="sb-icon-search"></span>
         </form>
       </div>
       <div id="myNav" class="backGround">
+        <div class="post videoPost" >
 
+          <iframe width="1200" height="550" src="https://www.youtube.com/embed/9-dZYQ5EhpA" frameborder="0" allowfullscreen></iframe>
+        </div>
       </div>
       <script type="text/javascript">
       function openNav() {
