--- a/pages/watch.html
+++ b/pages/watch.html
@@ -2,35 +2,37 @@
 <html lang="en" class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>look</title>
+    <title>Watch</title>
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 		<link rel="stylesheet" type="text/css" href="../css/component.css" />
 		<script src="../scripts/modernizr.custom.js"></script>
+    <link href="http://vjs.zencdn.net/6.2.7/video-js.css" rel="stylesheet">
   </head>
   <body onload="openNav()">
       <header>
         <div id="header"></div>
           <div id="back">
             <a class="link_1" href="../index.html">Show<span>Tracker</span></a>
-            <a class="link_2" href="serials.html">Сериалы</a>
-            <a class="link_2" href="films.html">Фильмы</a>
-            <a class="link_2" href="TV.html">ТВ</a>
-            <a class="link_2" href="actors.html">Актёры</a>
-            <a class="link_2" href="charakters.html">Персонажи</a>
+            <a class="link_2" href="serials.html">Serials</a>
+            <a class="link_2" href="films.html">Films</a>
+            <a class="link_2" href="TV.html">TV</a>
+            <a class="link_2" href="actors.html">Actors</a>
+            <a class="link_2" href="charakters.html">Charakters</a>
             <a class="link_2" href="VIP.html">VIP</a>
-            <a class="link_3" style="height: 41px;" href="login.html">Войти</a>
+            <a class="link_3" style="height: 41px;" href="login.html">Log in</a>
           </div>
       </header>
       <div id="sb-search" class="sb-search">
         <form>
-          <input class="sb-search-input" placeholder="Что будем искать?:)" type="text" value="" name="search" id="search">
+          <input class="sb-search-input" placeholder="What are we going to look for?:)" type="text" value="" name="search" id="search">
           <input class="sb-search-submit" type="submit" value="">
           <span class="sb-icon-search"></span>
         </form>
       </div>
       <div id="myNav" class="backGround">
-
+        <div class="post postWatch">
+            <iframe src="https://player.vimeo.com/video/234897503" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
       <script type="text/javascript">
       function openNav() {
