--- a/pages/watch.html
+++ b/pages/watch.html
@@ -31,9 +31,14 @@
         </form>
       </div>
       <div id="myNav" class="backGround">
-        <div class="post postWatch">
-            <iframe src="https://player.vimeo.com/video/234897503" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-      </div>
+          <div class="post postWatch">
+            <a href="watch/watch_1.html">
+            <div id="img" width="200px" height="130px" border-radius="15px" style="background-image: url(../img/656586371.jpg)"></div>
+          </a>
+          <a href="watch/watch_2.html">
+          <div id="img" width="200px" height="130px" border-radius="15px" style="background-image: url(https://youtu.be/9-dZYQ5EhpA?t=272)"></div>
+          </a>
+        </div>
       <script type="text/javascript">
       function openNav() {
         document.getElementById("myNav").style.width = "100%";
